# AirControll

./: AirControll.code-workspace  CMakeLists.txt  CMakePresets.json  README.md
apps/Common/osal/: osal.c
apps/Common/threadx/ports/cortex_m3/gnu/example_build/: sample_threadx.out
apps/Common/threadx/ports/win32/vs_2019/example_build/sample_threadx/: sample_threadx.c
apps/Gateway/: CMakeLists.txt  main.cpp
platform/: mini-m3.cmake
platform/MiniM3_Bsp/: CMakeLists.txt
platform/MiniM3_Bsp/STM32F10x_StdPeriph_Driver/src/: misc.c
platform/MiniM3_Bsp/boardConfig/: buttons.h  common.h  hardware.h
platform/MiniM3_Bsp/uart/: uart.c  uart.h
platform/mini-m3/ld/: stm32f031x6.ld  threadx.ld
platform/mini-m3/threadx_startup/: threadx_startup.cmake
scripts/: startOCD.cmd
